force-app/main/default/objects/cdcpc__RD_Holder_Component_Part_Number__c/fields/cdcpc__PartCode__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__PartCode__c</fullName>
    <label>PartCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>