force-app/main/default/objects/cdcpc__RD_Holder_Component_Part_Number__c/fields/cdcpc__SZC__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__SZC__c</fullName>
    <label>SZC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>