force-app/main/default/objects/cdcpc__RD_Holder_Component_Part_Number__c/fields/cdcpc__TestingCode__c.field-meta.xml
<CustomField>
    <fullName>cdcpc__TestingCode__c</fullName>
    <label>TestingCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>