force-app/main/default/objects/cdcpc__RD_Holder_Component_Part_Number__c/listViews/cdcpc__All.listView-meta.xml
<ListView>
    <fullName>cdcpc__All</fullName>
    <columns>cdcpc__HolderComponentPartNumber__c</columns>
    <columns>cdcpc__PTC__c</columns>
    <columns>cdcpc__STC__c</columns>
    <columns>cdcpc__SZC__c</columns>
    <columns>cdcpc__Matl__c</columns>
    <columns>cdcpc__DSCVAR__c</columns>
    <columns>cdcpc__HCLASS__c</columns>
    <columns>cdcpc__PartCode__c</columns>
    <columns>cdcpc__Connection__c</columns>
    <columns>cdcpc__SourceCode__c</columns>
    <columns>cdcpc__TestingCode__c</columns>
    <columns>cdcpc__OptionCode__c</columns>
    <columns>cdcpc__Leadtime__c</columns>
    <columns>cdcpc__CompPTC__c</columns>
    <columns>cdcpc__CompSZC__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>cdcpc__HolderComponentPartNumber__c</field>
        <operation>startsWith</operation>
        <value>T4B</value>
    </filters>
    <label>All</label>
</ListView>